# Copyright 2026 Enactic, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "openarm-vr-teleop"
version = "0.1.0"
description = "Shared utilities and node implementations for VR teleoperation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dora-rs==0.5.0",
    "dora-rs-cli==0.5.0",
    "numpy>=2.4.4",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
]

[project.scripts]
dora-openarm-quest-receiver = "node.dora_openarm_quest_receiver.main:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
