# Copyright 2026 Enactic, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "dora-openarm-vr"
version = "0.1.0"
description = "Shared utilities and node implementations for VR teleoperation"
authors = [{name = "Enactic, Inc."}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dora-rs==0.5.0",
    "dora-rs-cli==0.5.0",
    "numpy>=2.4.4",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
]

[project.urls]
Changelog = "https://github.com/enactic/dora-openarm-vr/releases"
Issues = "https://github.com/enactic/dora-openarm-vr/issues"
Repository = "https://github.com/enactic/dora-openarm-vr.git"

[project.scripts]
dora-openarm-quest-receiver = "dora_openarm_vr.quest_receiver:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
